# SE_1_RUNE

./: .env.example  .gitignore  CLAUDE.md  Phase1_design.md  README.md  main.py  pyproject.toml
.streamlit/: config.toml
data/dummy/: ulysses_tickets.json
docs/: jira_integration_guide.md  testing_guide.md
scripts/: validate_json.py
src/agent/: edges.py  graph.py  nodes.py  prompts.py
src/classification/: __init__.py  engine.py  keywords.py
src/datasource/: base.py  dummy_adapter.py  factory.py  jira_adapter.py
src/graph/: base.py  factory.py  loader.py  networkx_backend.py
src/ingest/: __init__.py  base.py  factory.py  file_source.py  jira_source.py
src/metrics/: traceability.py
src/models/: graph_state.py  jira_ticket.py  ontology.py  raw_document.py
src/staging/: sqlite_store.py
src/ui/: app.py
src/ui/components/: graph_renderer.py  styles.py
src/ui/pages/: 01_flat_view.py  02_graph_view.py  03_agent_run.py  04_approvals.py  05_metrics.py  06_ingest_pipeline.py
tests/: conftest.py
tests/integration/: test_graph_pipeline.py
tests/unit/: test_agent_helpers.py  test_dummy_adapter.py  test_metrics.py  test_models.py  test_networkx_backend.py  test_staging.py
